--- a/dplyr/dplyr.html
+++ b/dplyr/dplyr.html
@@ -144,16 +144,17 @@ a = h(a, d)</pre>
 <pre >[1] &quot;kirby127a_3_1_ax_283Labels_M2_corrected_stats.txt&quot;
 [2] &quot;kirby142a_3_1_ax_283Labels_M2_corrected_stats.txt&quot;</pre>
 
-</article></slide><slide class=''><hgroup><h2>Utility functions</h2></hgroup><article  id="utility-functions">
+</article></slide><slide class=''><hgroup><h2>These have to be downloaded from github</h2></hgroup><article  id="these-have-to-be-downloaded-from-github">
 
-<pre class = 'prettyprint lang-r'>source(&quot;~/sandboxes/MRIcloudT1volumetrics/R/readSubject.R&quot;)
-source(&quot;~/sandboxes/MRIcloudT1volumetrics/R/splitFileName.R&quot;)
-source(&quot;~/sandboxes/MRIcloudT1volumetrics/R/subject2df.R&quot;)
-source(&quot;~/sandboxes/MRIcloudT1volumetrics/R/utils.R&quot;)</pre>
+<pre class = 'prettyprint lang-r'>## Only if you don&#39;t have the package installed
+#source(&quot;https://neuroconductor.org/neurocLite.R&quot;)
+#neuro_install(&quot;MRIcloudT1volumetrics&quot;)
+require(devtools)
+devtools::install_github(&quot;bcaffo/MRIcloudT1volumetrics&quot;)</pre>
 
 </article></slide><slide class=''><hgroup><h2>Load in dplyr and read in the data</h2></hgroup><article  id="load-in-dplyr-and-read-in-the-data">
 
-<pre class = 'prettyprint lang-r'>library(dplyr)
+<pre class = 'prettyprint lang-r'>library(magrittr); library(dplyr); library(MRIcloudT1volumetrics) 
 roiDir = &quot;../data/&quot;
 fileList = dir(roiDir)
 dat = readSubject(paste(roiDir, fileList[1], sep = &quot;&quot;)) %&gt;% 
@@ -163,17 +164,28 @@ dat = readSubject(paste(roiDir, fileList[1], sep = &quot;&quot;)) %&gt;%
 
 <pre class = 'prettyprint lang-r'>head(dat, 10)</pre>
 
-<pre >                  rawid              roi volume type level
-1  kirby127a_3_1_ax.img  Telencephalon_L 531111    1     1
-2  kirby127a_3_1_ax.img  Telencephalon_R 543404    1     1
-3  kirby127a_3_1_ax.img   Diencephalon_L   9683    1     1
-4  kirby127a_3_1_ax.img   Diencephalon_R   9678    1     1
-5  kirby127a_3_1_ax.img    Mesencephalon  10268    1     1
-6  kirby127a_3_1_ax.img    Metencephalon 159402    1     1
-7  kirby127a_3_1_ax.img   Myelencephalon   4973    1     1
-8  kirby127a_3_1_ax.img              CSF 109776    1     1
-9  kirby127a_3_1_ax.img CerebralCortex_L 276965    1     2
-10 kirby127a_3_1_ax.img CerebralCortex_R 282858    1     2</pre>
+<pre >                  rawid              roi volume min max     mean     std
+1  kirby127a_3_1_ax.img  Telencephalon_L 531111   0 374 128.3013 51.8593
+2  kirby127a_3_1_ax.img  Telencephalon_R 543404   0 300 135.0683 53.6471
+3  kirby127a_3_1_ax.img   Diencephalon_L   9683  15 295 193.5488 32.2733
+4  kirby127a_3_1_ax.img   Diencephalon_R   9678  10 335 193.7051 32.7869
+5  kirby127a_3_1_ax.img    Mesencephalon  10268  55 307 230.8583 29.2249
+6  kirby127a_3_1_ax.img    Metencephalon 159402   2 299 138.5200 52.2241
+7  kirby127a_3_1_ax.img   Myelencephalon   4973  12 286 199.8497 36.6501
+8  kirby127a_3_1_ax.img              CSF 109776   0 258  33.0193 26.3262
+9  kirby127a_3_1_ax.img CerebralCortex_L 276965   0 249  88.5014 27.7510
+10 kirby127a_3_1_ax.img CerebralCortex_R 282858   0 295  93.7283 28.1726
+   type level
+1     1     1
+2     1     1
+3     1     1
+4     1     1
+5     1     1
+6     1     1
+7     1     1
+8     1     1
+9     1     2
+10    1     2</pre>
 
 </article></slide><slide class=''><hgroup><h2>Get rid of the id column</h2></hgroup><article  id="get-rid-of-the-id-column">
 
@@ -185,17 +197,17 @@ dat = readSubject(paste(roiDir, fileList[1], sep = &quot;&quot;)) %&gt;%
 <pre class = 'prettyprint lang-r'>dat = select(dat, -rawid)
 head(dat, 10)</pre>
 
-<pre >                roi volume type level
-1   Telencephalon_L 531111    1     1
-2   Telencephalon_R 543404    1     1
-3    Diencephalon_L   9683    1     1
-4    Diencephalon_R   9678    1     1
-5     Mesencephalon  10268    1     1
-6     Metencephalon 159402    1     1
-7    Myelencephalon   4973    1     1
-8               CSF 109776    1     1
-9  CerebralCortex_L 276965    1     2
-10 CerebralCortex_R 282858    1     2</pre>
+<pre >                roi volume min max     mean     std type level
+1   Telencephalon_L 531111   0 374 128.3013 51.8593    1     1
+2   Telencephalon_R 543404   0 300 135.0683 53.6471    1     1
+3    Diencephalon_L   9683  15 295 193.5488 32.2733    1     1
+4    Diencephalon_R   9678  10 335 193.7051 32.7869    1     1
+5     Mesencephalon  10268  55 307 230.8583 29.2249    1     1
+6     Metencephalon 159402   2 299 138.5200 52.2241    1     1
+7    Myelencephalon   4973  12 286 199.8497 36.6501    1     1
+8               CSF 109776   0 258  33.0193 26.3262    1     1
+9  CerebralCortex_L 276965   0 249  88.5014 27.7510    1     2
+10 CerebralCortex_R 282858   0 295  93.7283 28.1726    1     2</pre>
 
 </article></slide><slide class=''><hgroup><h2>Using filter</h2></hgroup><article  id="using-filter">
 
@@ -206,15 +218,15 @@ head(dat, 10)</pre>
 <pre class = 'prettyprint lang-r'>dat  = filter(dat, type == 1, level == 1)
 dat</pre>
 
-<pre >              roi volume type level
-1 Telencephalon_L 531111    1     1
-2 Telencephalon_R 543404    1     1
-3  Diencephalon_L   9683    1     1
-4  Diencephalon_R   9678    1     1
-5   Mesencephalon  10268    1     1
-6   Metencephalon 159402    1     1
-7  Myelencephalon   4973    1     1
-8             CSF 109776    1     1</pre>
+<pre >              roi volume min max     mean     std type level
+1 Telencephalon_L 531111   0 374 128.3013 51.8593    1     1
+2 Telencephalon_R 543404   0 300 135.0683 53.6471    1     1
+3  Diencephalon_L   9683  15 295 193.5488 32.2733    1     1
+4  Diencephalon_R   9678  10 335 193.7051 32.7869    1     1
+5   Mesencephalon  10268  55 307 230.8583 29.2249    1     1
+6   Metencephalon 159402   2 299 138.5200 52.2241    1     1
+7  Myelencephalon   4973  12 286 199.8497 36.6501    1     1
+8             CSF 109776   0 258  33.0193 26.3262    1     1</pre>
 
 </article></slide><slide class=''><hgroup><h2>Create ICV normalized volumes</h2></hgroup><article  id="create-icv-normalized-volumes">
 
@@ -225,15 +237,15 @@ dat</pre>
 <pre class = 'prettyprint lang-r'>dat = mutate(dat, icv = sum(volume))
 dat</pre>
 
-<pre >              roi volume type level     icv
-1 Telencephalon_L 531111    1     1 1378295
-2 Telencephalon_R 543404    1     1 1378295
-3  Diencephalon_L   9683    1     1 1378295
-4  Diencephalon_R   9678    1     1 1378295
-5   Mesencephalon  10268    1     1 1378295
-6   Metencephalon 159402    1     1 1378295
-7  Myelencephalon   4973    1     1 1378295
-8             CSF 109776    1     1 1378295</pre>
+<pre >              roi volume min max     mean     std type level     icv
+1 Telencephalon_L 531111   0 374 128.3013 51.8593    1     1 1378295
+2 Telencephalon_R 543404   0 300 135.0683 53.6471    1     1 1378295
+3  Diencephalon_L   9683  15 295 193.5488 32.2733    1     1 1378295
+4  Diencephalon_R   9678  10 335 193.7051 32.7869    1     1 1378295
+5   Mesencephalon  10268  55 307 230.8583 29.2249    1     1 1378295
+6   Metencephalon 159402   2 299 138.5200 52.2241    1     1 1378295
+7  Myelencephalon   4973  12 286 199.8497 36.6501    1     1 1378295
+8             CSF 109776   0 258  33.0193 26.3262    1     1 1378295</pre>
 
 </article></slide><slide class=''><hgroup><h2>Why magrittr is so useful</h2></hgroup><article  id="why-magrittr-is-so-useful">
 
@@ -250,13 +262,20 @@ dat</pre>
         subject2df()
 head(fullData)</pre>
 
-<pre >                 rawid             roi volume type level
-1 kirby127a_3_1_ax.img Telencephalon_L 531111    1     1
-2 kirby127a_3_1_ax.img Telencephalon_R 543404    1     1
-3 kirby127a_3_1_ax.img  Diencephalon_L   9683    1     1
-4 kirby127a_3_1_ax.img  Diencephalon_R   9678    1     1
-5 kirby127a_3_1_ax.img   Mesencephalon  10268    1     1
-6 kirby127a_3_1_ax.img   Metencephalon 159402    1     1</pre>
+<pre >                 rawid             roi volume min max     mean     std
+1 kirby127a_3_1_ax.img Telencephalon_L 531111   0 374 128.3013 51.8593
+2 kirby127a_3_1_ax.img Telencephalon_R 543404   0 300 135.0683 53.6471
+3 kirby127a_3_1_ax.img  Diencephalon_L   9683  15 295 193.5488 32.2733
+4 kirby127a_3_1_ax.img  Diencephalon_R   9678  10 335 193.7051 32.7869
+5 kirby127a_3_1_ax.img   Mesencephalon  10268  55 307 230.8583 29.2249
+6 kirby127a_3_1_ax.img   Metencephalon 159402   2 299 138.5200 52.2241
+  type level
+1    1     1
+2    1     1
+3    1     1
+4    1     1
+5    1     1
+6    1     1</pre>
 
 </article></slide><slide class=''><hgroup><h2>Summarise</h2></hgroup><article  id="summarise">
 
@@ -294,7 +313,7 @@ head(fullData)</pre>
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
